create atomic classes and styles

--- a/index.html
+++ b/index.html
@@ -20,5 +20,16 @@
     <h6>Heading 6</h6>
 
     <a href="#">Click Me</a>
+
+    <p class="subtitle">I am a subtitle</p>
+    <p class="subtitl secondary-text">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste eum natus
+      architecto in, aliquid fugit quam pariatur harum nostrum, dolores
+      cupiditate, iure accusamus deleniti ipsam assumenda inventore perferendis
+      quia cumque!
+    </p>
+
+    <button class="primary-button">Click me</button>
+    <button class="secondary-button">Secondary</button>
   </body>
 </html>
