Add button classes with animated icon

--- a/index.html
+++ b/index.html
@@ -31,5 +31,13 @@
 
     <button class="primary-button">Click me</button>
     <button class="secondary-button">Secondary</button>
+    <button class="primary-button with-icon">
+      Click me
+      <img src="assets/arrow-right-light.svg" alt="" />
+    </button>
+    <button class="secondary-button with-icon">
+      Click me
+      <img src="assets/arrow-right-dark.svg" alt="" />
+    </button>
   </body>
 </html>
