--- a/index.html
+++ b/index.html
@@ -12,32 +12,45 @@
     <title>Swipe Project</title>
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-    <h5>Heading 5</h5>
-    <h6>Heading 6</h6>
+    <nav class="navbar">
+      <img src="assets/logo-white.svg" alt="Swipe Incorporated" />
+      <ul class="menu">
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Solutions</a></li>
+        <li><a href="#">Developers</a></li>
+        <li><a href="#">Resources</a></li>
+        <li><a href="#">Pricing</a></li>
+      </ul>
+      <button class="primary-button navbar-button">Sign In</button>
+    </nav>
 
-    <a href="#">Click Me</a>
-
-    <p class="subtitle">I am a subtitle</p>
-    <p class="subtitl secondary-text">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste eum natus
-      architecto in, aliquid fugit quam pariatur harum nostrum, dolores
-      cupiditate, iure accusamus deleniti ipsam assumenda inventore perferendis
-      quia cumque!
-    </p>
-
-    <button class="primary-button">Click me</button>
-    <button class="secondary-button">Secondary</button>
-    <button class="primary-button with-icon">
-      Click me
-      <img src="assets/arrow-right-light.svg" alt="" />
-    </button>
-    <button class="secondary-button with-icon">
-      Click me
-      <img src="assets/arrow-right-dark.svg" alt="" />
-    </button>
+    <div class="section-container">
+      <div class="two-column">
+        <div class="col-left">
+          <p class="subtitle">I am a subtitle</p>
+          <h3>Heading 3</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Necessitatibus dolorum minus quos placeat, temporibus quas
+            doloremque at mollitia. Sit fugit dolores reiciendis est iste sequi
+            maxime exercitationem dolor pariatur. Quod!
+          </p>
+        </div>
+        <div class="col-right">
+          <h3>Heading 3</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum
+            possimus perspiciatis, aliquam debitis, nihil numquam, amet libero
+            dignissimos illum laborum odio obcaecati ab veritatis esse ut
+            voluptatum. Est magni, sed provident architecto qui, minus
+            perspiciatis iste, odio reprehenderit unde doloribus.
+          </p>
+          <div class="two-column">
+            <div class="col-left">dasefdrgtyhuj</div>
+            <div class="col-right">dafesgrdhj</div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
