Add hero contents

--- a/index.html
+++ b/index.html
@@ -24,33 +24,32 @@
       <button class="primary-button navbar-button">Sign In</button>
     </nav>
 
-    <div class="section-container">
-      <div class="two-column">
-        <div class="col-left">
-          <p class="subtitle">I am a subtitle</p>
-          <h3>Heading 3</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Necessitatibus dolorum minus quos placeat, temporibus quas
-            doloremque at mollitia. Sit fugit dolores reiciendis est iste sequi
-            maxime exercitationem dolor pariatur. Quod!
-          </p>
-        </div>
-        <div class="col-right">
-          <h3>Heading 3</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum
-            possimus perspiciatis, aliquam debitis, nihil numquam, amet libero
-            dignissimos illum laborum odio obcaecati ab veritatis esse ut
-            voluptatum. Est magni, sed provident architecto qui, minus
-            perspiciatis iste, odio reprehenderit unde doloribus.
-          </p>
-          <div class="two-column">
-            <div class="col-left">dasefdrgtyhuj</div>
-            <div class="col-right">dafesgrdhj</div>
+    <main>
+      <div class="hero">
+        <div class="section-container two-column">
+          <div class="col-left">
+            <h1>Payments infrastructure for the world</h1>
+            <p>
+              Tons of companies all over the world use Swipe's seamless platform
+              to manage thei businesses's entire financial transaction
+              infrastructure online.
+            </p>
+            <div class="button-container">
+              <button class="primary-button with-icon">
+                Start now
+                <img src="assets/arrow-right-light.svg" alt="" />
+              </button>
+              <button class="secondary-button with-icon">
+                Contact sales
+                <img src="assets/arrow-right-purple.svg" alt="" />
+              </button>
+            </div>
+          </div>
+          <div class="col-right hero-phone-container">
+            <img class="hero-phone" src="assets/hero-phone.png" alt="" />
           </div>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
