--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <button class="primary-button navbar-button">Sign In</button>
     </nav>
 
+    <!-- Hero -->
     <main>
       <div class="hero">
         <div class="section-container two-column">
@@ -51,6 +52,7 @@
         </div>
       </div>
 
+      <!-- Partners -->
       <div class="partners-section">
         <div class="section-container">
           <div class="partners-grid">
@@ -63,6 +65,41 @@
             <img src="assets/lyft.png" alt="Lyft" />
             <img src="assets/zoom.png" alt="Zoom" />
           </div>
+        </div>
+      </div>
+
+      <!-- Unified Platform -->
+      <div class="unified-platform-section">
+        <div class="section-container">
+          <p class="subtitle">Unified platform</p>
+          <h2>All the payment products you'll ever need</h2>
+          <div class="two-column">
+            <div class="col-left">
+              <p>
+                We've got everything you'll need and more to build websites and
+                apps that handles payments, payouts, and much more. Swipe's
+                products power payments for
+                <a href="#">all kinds of retailers</a>,
+                <a href="#">all kinds of businesses</a>,
+                <a href="#">software platforms &amp; marketplaces</a>, and
+                everything in between.
+              </p>
+            </div>
+            <div class="col-right">
+              <p>
+                We also help companies' <a href="#">tackle fraud</a>,
+                <a href="#">issue invoices</a>,
+                <a href="#">send virtual and physical cards</a>,
+                <a href="#">manage financing</a>,
+                <a href="#">wrangle business spend</a>
+                , and much more.
+              </p>
+            </div>
+          </div>
+          <button class="primary-button with-icon">
+            Start now
+            <img src="assets/arrow-right-light.svg" alt="" />
+          </button>
         </div>
       </div>
     </main>
